# CV_Practice

./: .read_caffemodel.py.swp  README.md
C++/RT3dPointsReprojection/: CMakeLists.txt
C++/RT3dPointsReprojection/build-back/: 3DPointsReprojection  Makefile
C++/utils/: ReadXYZPointsTxt.h
PCL_test/: CMakeLists.txt  pcd_write.cpp  pcl_test.cpp
Python/: .ply2obj.py.swp  chess_Map_2020_02_21_18_45_35.txt  ply2obj.py  test.py
Python/3d-processing/: opengl.py
Python/numba/: numba_tutorial.py
Python/opencv/: drawing_cv.py  realtime_webcam_stream.py  start_with_imgs.py
Python/pycaffe/: Pointclf_final.caffemodel  chess_pspnet_pointclf_2fclayers.prototxt  read_caffemodel.py
RT3dPointsReprojection/: 3DPointsReprojection.cpp  7scenes-3DPointsReprojection.cpp  CMakeLists.txt
RT3dPointsReprojection/build-back/: CMakeCache.txt
pycaffe/: chess_semantic_trn.prototxt  fusion_model.py  pspnet50_ADE20K_473.prototxt  read_caffemodel.py
utils/: ReadRTMatrix.h
